# SistemaSanatorio

./: .gitignore  CMakeLists.txt
src/: Especialidad.cpp  Especialidad.h  Paciente.cpp  Paciente.h  Persona.h  Profesional.cpp  Profesional.h  Sanatorio.cpp  Sanatorio.h  SistemaSanatorio.cpp  SistemaSanatorio.h  Turno.cpp  Turno.h  main.cpp
ui/: menu.cpp  menu.h
